Factor out data, switch to uuid ids, add some favorites endpoints
